mudança no endereço de email

--- a/load_coffee - Copia/index.html
+++ b/load_coffee - Copia/index.html
@@ -38,7 +38,7 @@
 </div>
 
 
-    <h2>Email: Coffeelover@gmail.com | Tel: (81) 4002-8922</h2>
+    <h2>Email:  lovecoffeeandrobots@gmail.com | Tel: (81) 4002-8922</h2>
     <p>Instagram | TikTok | Threads</p>
    
 
