atualização index.html
Atualização do index html do "Love, Coffee & Robots". Avaliação em sistemas de estrelas (apenas estética)

--- a/load_coffee - Copia/index.html
+++ b/load_coffee - Copia/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coffee Lover</title>
+    <title>Coffee + Robots</title>
     <h1><a href="https://youtu.be/RK1lXWL24mc"> Home | Produtos | Contato</a></h1>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,25 +20,28 @@
   <div style="text-align: center;">
     <img src="https://castronaves.vteximg.com.br/arquivos/ids/211621-1000-1000/25510_01.jpg?v=636954500649430000" alt="Produto 1" style="width: 200px;">
     <h3>Cappuccino 3 corações</h3>
+    <div style="color: gold; font-size: 25px;">★★★★★</div>
     <p>R$ 49,90</p>
      <button>Comprar</button>
   </div>
   <div style="text-align: center;">
     <img src="https://static1.efacil.com.br/wcsstore/ExtendedSitesCatalogAssetStore/Imagens/360/4300248_01.jpg" alt="Produto 2" style="width: 200px;">
     <h3>Café Espresso 3 corações</h3>
+    <div style="color: gold; font-size: 25px;">★★★★★</div>
     <p>R$ 59,90</p>
      <button>Comprar</button>
   </div>
   <div style="text-align: center;">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8BGiiljqIOfzOtDppt3BEPsfkWNOIFxL8hg&s" alt="Produto 3" style="width: 200px;">
     <h3>Café Tradicional 3 corações</h3>
+    <div style="color: gold; font-size: 25px;">★★★☆☆</div>
     <p>R$ 69,90</p>
      <button>Comprar</button>
   </div>
 </div>
 
 
-    <h2>Email:  lovecoffeeandrobots@gmail.com | Tel: (81) 4002-8922</h2>
+    <h2>Email: lovecoffeeandrobots@gmail.com | Tel: (81) 4002-8922</h2>
     <p>Instagram | TikTok | Threads</p>
    
 
