--- a/load_coffee - Copia/index.html
+++ b/load_coffee - Copia/index.html
@@ -18,31 +18,31 @@
          
                 <div style="display: flex; justify-content: space-around;">
   <div style="text-align: center;">
-    <img src="https://castronaves.vteximg.com.br/arquivos/ids/211621-1000-1000/25510_01.jpg?v=636954500649430000" alt="Produto 1" style="width: 200px;">
+    <img src="C:\Users\aluno.cad\Downloads\cappuccino-removebg-preview.png" alt="Produto 1" style="width: 200px;">
     <h3>Cappuccino 3 corações</h3>
-    <div style="color: gold; font-size: 25px;">★★★★★</div>
-    <p>R$ 49,90</p>
+    <div style="color: gold; font-size: 22px;  text-shadow: 0 0 7px black;">★★★★★</div>
+    <p>R$ 2,69</p>
      <button>Comprar</button>
   </div>
   <div style="text-align: center;">
-    <img src="https://static1.efacil.com.br/wcsstore/ExtendedSitesCatalogAssetStore/Imagens/360/4300248_01.jpg" alt="Produto 2" style="width: 200px;">
+    <img src="C:\Users\aluno.cad\Downloads\cafeespresso22-removebg-preview (1).png" alt="Produto 2" style="width: 200px;">
     <h3>Café Espresso 3 corações</h3>
-    <div style="color: gold; font-size: 25px;">★★★★★</div>
-    <p>R$ 59,90</p>
+    <div style="color: gold; font-size: 22px;  text-shadow: 0 0 7px black;">★★★★★</div>
+    <p>R$ 20,99</p>
      <button>Comprar</button>
   </div>
   <div style="text-align: center;">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8BGiiljqIOfzOtDppt3BEPsfkWNOIFxL8hg&s" alt="Produto 3" style="width: 200px;">
+    <img src="https://mercafefaststore.vtexassets.com/arquivos/ids/554739/3C-TORRADO-MOIDO-TRADICIONAL.png?v=638666755937630000" alt="Produto 3" style="width: 200px;">
     <h3>Café Tradicional 3 corações</h3>
-    <div style="color: gold; font-size: 25px;">★★★☆☆</div>
-    <p>R$ 69,90</p>
+    <div style="color: gold; font-size: 22px;  text-shadow: 0 0 7px black;">★★★☆☆</div>
+    <p>R$ 36,99</p>
      <button>Comprar</button>
   </div>
 </div>
 
 
-    <h2>Email: lovecoffeeandrobots@gmail.com | Tel: (81) 4002-8922</h2>
-    <p>Instagram | TikTok | Threads</p>
+    <h2>Email:lovecoffeeandrobots@gmail.com | Tel:(81) 4002-8922</h2>
+    <p> Instagram | TikTok | Threads</p>
    
 
 <footer>
